@@ -1,11 +1,15 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.3 2005-03-19 03:28:29 achu Exp $
+## $Id: Makefile.am,v 1.4 2005-03-19 08:40:14 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
+
+man1_MANS = cerebro.1
 
 man5_MANS = cerebrod.conf.5
  
 man8_MANS = cerebrod.8
 
-EXTRA_DIST = cerebrod.conf.5 cerebrod.8
+EXTRA_DIST = cerebro.1 \
+             cerebrod.conf.5 \
+             cerebrod.8
