@@ -1,0 +1,3 @@
+\."#############################################################################
+\."$Id: cerebro.1.in,v 1.1 2005-03-19 08:40:14 achu Exp $
+\."#############################################################################
