@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebrod.8.in,v 1.3 2005-03-19 01:34:31 achu Exp $
+\."$Id: cerebrod.8.in,v 1.4 2005-03-19 08:40:14 achu Exp $
 \."#############################################################################
 .TH cerebrod 8 "May 2005" "cerebrod @VERSION@" cerebrod
 .SH "NAME"
@@ -11,22 +11,31 @@ cerebrod \- cerebro monitoring daemon
 The
 .B cerebrod
 daemon is responsible for distributing and receiving cluster
-node data from each node in the cluster.
+node data from each node in the cluster for use within the
+.B Cerebro
+suite of tools and libraries.
 .SH "OPTIONS"
 .TP
 .B  -h, --help
-foo
+Output help
 .TP
-.B  -v, --help
-foo
+.B  -v, --version
+Output version
 .TP
-.B  -c, --help
-foo
+.B  -c, --configfile
+Specify alternate configuration file
 .TP
-.B  -m, --help
-foo
+.B  -m, --configmodule
+Specify configuration module
 .if @MANPAGE_DEBUG@ \{
 .TP
-.B  -d, --help
-foo
+.B  -d, --debug
+Turn on debugging and run daemon in foreground
 \}
+.SH "FILES"
+@CEREBROD_CONFIGFILE_DEFAULT@
+.SH "ORIGIN"
+Developed by Albert Chu <chu11@llnl.gov> on LLNL's GNU/Linux clusters.
+.SH "SEE ALSO"
+cerebrod(1), cerebrod.conf(5)
+
